<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014-2017 The OmniROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Nubia Setting</string>
    <string name="advanced_settings">Nubia Setting</string>
    <string name="advanced_settings_summary">Make Z11 Great again</string>

    <string name="display_title">Display</string>
    <string name="device_doze_title">Ambient Display</string>
    
    <!-- Overclock -->
    <string name="oc_title">Overclock</string>
    <string name="oc_hw_buttons_title">Enable Overclocking</string>
    <string name="oc_hw_buttons_summary">Use This When Gaming :)</string>
    
    <!-- Camera -->
    <string name="camera_title">Camera</string>
    <string name="camera_reset_title">Camera Reset</string>
    <string name="camera_reset_summary">This resets the camera server if your camera blackscreens</string>
    <string name="camera_reset_hint">restarting camera server...</string>
    <string name="camera_reset_launcher_name">CamReset</string>
    
    <!-- s2s 
    <string name="s2s_title">Sweep to sleep</string>
    <string name="s2s_title_head">Sweep to sleep gesture</string>
    <string name="s2s_title_summary">Swipe gesture sleep at the bottom of the screen</string>
    <string name="s2s_vib_strength_title_head">Sweep2sleep vibration</string> -->

    <!-- Kcal 
    <string name="kcal_title">Display color</string>
    <string name="kcal_summary">Display color calibration using KCAL</string>
    <string name="kcal_enabled_title">Enable KCAL</string>
    <string name="kcal_enabled_summary">Turn on display calibration using KCAL</string>
    <string name="kcal_red">Red</string>
    <string name="kcal_green">Green</string>
    <string name="kcal_blue">Blue</string>
    <string name="kcal_saturation">Saturation</string>
    <string name="kcal_contrast">Contrast</string>
    <string name="menu_reset">Reset</string>
    <string name="kcal_color_temp">Color temperature (K)</string> -->

    <!-- Spectrum Profiles 
    <string name="spectrum_profile_title">Kernel Profiles</string>
    <string name="spectrum_title">Kernel Profile</string>
    <string name="spectrum_summary">Choose your kernel profile</string>
    <string name="spectrum_dialogTitle">Choose your kernel profile</string> -->

    <!-- Swap HW buttons -->
    <string name="hw_buttons_title">Hardware buttons</string>
    <string name="swap_hw_buttons_title">Swap buttons</string>
    <string name="swap_hw_buttons_summary">Swap the order of recents and back buttons</string>

    <!-- Button brightness -->
    <string name="btn_title">Buttons</string>
    <string name="btn_led_title">Led brightness</string>
    <string name="btn_led_summary">Adjust the led brightness of buttons</string>

    <!-- usb fastcharge -->
    <string name="usb_fastcharge_title">USB Fastcharge</string>
    <string name="fastcharge_title">Enable USB Fastcharge</string>
    <string name="fastcharge_summary">Enable to use fastcharge when connected to an computer USB 3.X</string>

    <!-- dirac -->
    <string name="sound_title">Sound</string>
    <string name="xiaomi_dirac_title">Dirac Sound Enhancer</string>
    <string name="xiaomi_dirac_summary">Optimize audio quality</string>

    <!-- seekbar -->
    <string name="seekbar_no_default_value">No default value set</string>
    <string name="seekbar_default_value_set">Value set to default of <xliff:g id="number">%d</xliff:g></string>
    <string name="seekbar_default_value_already_set">Default value is already set</string>
    
    <!-- about section -->
    <string name="about_title">About</string>
    <string name="about">Brought to you by Lightvortex and DazzWorld</string>
</resources>
